fix(aboutmodal): hyperlink spacing (#9702)
* fix(aboutmodal): hyperlink spacing

* fix(aboutmodal): hyperlink spacing to use margin instead of padding

--- a/packages/ibm-products-styles/src/components/AboutModal/_about-modal.scss
+++ b/packages/ibm-products-styles/src/components/AboutModal/_about-modal.scss
@@ -70,9 +70,18 @@ $block-class: #{c4p-settings.$pkg-prefix}--about-modal;
 }
 
 .#{$block-class} .#{$block-class}__links-container a + a {
-  border-inline-start: 1px solid $border-strong-01;
-  margin-inline-start: $spacing-03;
-  padding-inline-start: $spacing-03;
+  position: relative;
+  margin-inline-start: $spacing-05;
+
+  &::before {
+    position: absolute;
+    background-color: $border-strong-01;
+    block-size: 1lh;
+    content: '';
+    inline-size: 1px;
+    inset-block-start: 0;
+    inset-inline-start: calc($spacing-03 * -1);
+  }
 }
 
 .#{$block-class} .#{$block-class}__content,
